Fix a small misalignment among the tiles
Pointed out by eagle-eye Allan.

https://bugzilla.gnome.org/show_bug.cgi?id=777438

--- a/src/recipes.css
+++ b/src/recipes.css
@@ -255,3 +255,7 @@ image.very-spicy {
   background: transparent;
 }
 
+flowbox flowboxchild {
+  padding: 0;
+  border-radius: 0;
+}
